# libufec

./: CMakeLists.txt  README  build_and_test.sh
doc/: dox_config
examples/: CMakeLists.txt  GetBackTrace.h  config.c  led_on.c  read_status.c  reset.cpp  set_param.c  usb_reset.c
src/: 89-bmfeb.rules  BMFEBDef.h  CMakeLists.txt  GetBackTrace.h  UEFError.cpp  UEFError.h  UFEConfigFrame.cpp  UFEConfigFrame.h  UFEConfigLib.cpp  UFEConfigLib.h  UFEDef.h  UFEError.cpp  UFEError.h  config.cpp  config_test.cpp  dev_test.cpp  libbmfeb.c  libbmfeb.h  libufe-core.c  libufe-core.h  libufe-def.h  libufe-tools.c  libufe-tools.h  libufe.c  libufe.h  test.c  test.cpp
tests/: CMakeLists.txt  TestLibUfec.cpp  TestLibUfec.h  UnitTests.cpp
tools/: CMakeLists.txt  config.c  data_readout.c  get_config.c  led_on.c  message_browser.c  message_proxy.c  ping.c  read_status.c  set_param.c  usb_reset.c
